--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepReport": "rimraf reports traces && mkdir -p reports/screenshots reports/accessibility",
     "clean:reports": "rm -rf reports && mkdir -p reports/screenshots reports/performance reports/a11y reports/cucumber reports/playwright reports/html",
     "cucumber": "cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require \"src/steps/**/*.ts\"",
+    "cucumber:no-jaeger": "cross-env ENABLE_TRACING=false cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require \"src/steps/**/*.ts\"",
     "cucumber:dev": "npm run clean:reports && cross-env ENV=dev npx cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require 'src/steps/**/*.ts' && npm run report:generate",
     "cucumber:staging": "npm run clean:reports && cross-env ENV=staging cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require 'src/steps/**/*.ts'",
     "generate-feature": "ts-node src/scripts/generateFeatureFile.ts && npx gherkin-lint features/*.feature",
@@ -36,6 +37,13 @@
     "@cucumber/html-formatter": "21.7.0",
     "@cucumber/messages": "27.0.0",
     "@cucumber/pretty-formatter": "1.0.1",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.56.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
+    "@opentelemetry/instrumentation-fs": "^0.19.1",
+    "@opentelemetry/instrumentation-http": "^0.57.2",
+    "@opentelemetry/resources": "^1.30.1",
+    "@opentelemetry/sdk-node": "^0.57.2",
     "@playwright/test": "1.48.2",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-node": "4.22.0",
@@ -49,7 +57,8 @@
     "openai": "^4.82.0",
     "pixelmatch": "5.3.0",
     "playwright": "1.48.2",
-    "pngjs": "6.0.0"
+    "pngjs": "6.0.0",
+    "undefined": "^0.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "9.1.0",
