--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,25 @@
 {
   "compilerOptions": {
     "target": "ES2021",
-    "module": "CommonJS",
+    "module": "NodeNext",
     "lib": ["DOM", "ES2021"],
-    "sourceMap": true,
+    "sourceMap": false,
+    "declaration": false,
     "strict": true,
-    "moduleResolution": "node",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./@types"
-    ]
+    "outDir": "dist",  // ✅ Ensures compiled files go to "dist/"
+    "allowJs": true,
+    "moduleDetection": "force",
+    "noEmit": false  // ❌ REMOVE this line if present!
   },
   "include": [
-    "src/**/*.ts",
-    "gherkin-linter.ts"
-  ]
+    "src/**/*.ts"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
