updated Jaeger integration

--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "gherkin-lint": "npx gherkin-lint",
     "lint": "eslint 'src/**/*.ts'",
     "prepReport": "rimraf reports traces && mkdir -p reports/screenshots reports/accessibility",
-    "cucumber": "cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require \"src/steps/**/*.ts\"",
+    "clean": "rimraf dist",
+    "cucumber": "cucumber-js --config cucumber.mjs",
     "cucumber:dev": "cross-env ENV=dev cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require 'src/steps/**/*.ts'",
     "cucumber:staging": "cross-env ENV=staging cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require 'src/steps/**/*.ts'",
     "generate-feature": "ts-node src/scripts/generateFeatureFile.ts && npx gherkin-lint features/*.feature",
     "validate-k6-report": "cat reports/performance/loadTest.json | jq",
-    "build": "npx tsc",
+    "build": "npm run clean && tsc",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "codegen": "playwright codegen",
     "test:qa": "cross-env ENV=qa npx playwright test",
@@ -32,6 +33,15 @@
     "@cucumber/html-formatter": "21.7.0",
     "@cucumber/messages": "27.0.0",
     "@cucumber/pretty-formatter": "1.0.1",
+    "@grpc/grpc-js": "^1.13.3",
+    "@opentelemetry/exporter-jaeger": "^2.0.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.200.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
+    "@opentelemetry/instrumentation-fs": "^0.20.0",
+    "@opentelemetry/instrumentation-http": "^0.200.0",
+    "@opentelemetry/resources": "^2.0.0",
+    "@opentelemetry/sdk-node": "^0.200.0",
+    "@opentelemetry/semantic-conventions": "^1.32.0",
     "@playwright/test": "1.48.2",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-node": "4.22.0",
