--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "commonjs",
+    "module": "Node16",
     "lib": [
       "dom",
       "dom.iterable",
@@ -9,9 +9,10 @@
       "es2021"
     ],
     "sourceMap": true,
-    "outDir": "./build",
+    "noImplicitThis": true,
+    "outDir": "./dist",
     "strict": true,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true,
