--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,22 @@
 {
   "compilerOptions": {
     "target": "ES2021",
-    "module": "NodeNext",
+    "module": "CommonJS",
     "lib": ["DOM", "ES2021"],
     "sourceMap": false,
     "declaration": false,
     "strict": true,
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "dist",  // ✅ Ensures compiled files go to "dist/"
+    "outDir": "dist",
     "allowJs": true,
-    "moduleDetection": "force",
-    "noEmit": false  // ❌ REMOVE this line if present!
+    "moduleDetection": "force"
   },
-  "include": [
-    "src/**/*.ts"
-  ],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
