--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   jaeger:
     container_name: cucumber-playwright-jaeger
@@ -7,11 +9,11 @@ services:
       - COLLECTOR_OTLP_HTTP_HOST_PORT=:4318
       - COLLECTOR_OTLP_GRPC_HOST_PORT=:4317
     ports:
-      - "16686:16686"  # Jaeger UI
-      - "14250:14250"  # OTLP gRPC
-      - "6831:6831/udp"  # Jaeger agent
-      - "4317:4317"  # OTLP gRPC
-      - "4318:4318"  # OTLP HTTP
+      - "16686:16686"   # Jaeger UI
+      - "14250:14250"   # OTLP gRPC
+      - "6831:6831/udp" # Jaeger agent
+      - "4317:4317"     # OTLP gRPC
+      - "4318:4318"     # OTLP HTTP
 
   otel-collector:
     container_name: cucumber-playwright-otelcol
@@ -24,3 +26,27 @@ services:
       - "24318:4318"  # OTLP HTTP
     depends_on:
       - jaeger
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: cucumber-playwright-prometheus
+    ports:
+      - "9090:9090"
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--web.enable-remote-write-receiver'
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana-oss:latest
+    container_name: cucumber-playwright-grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana-storage:/var/lib/grafana
+
+volumes:
+  grafana-storage:
