--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
     "test": "cross-env ENV=qa npx playwright test",
     "generate:feature": "ts-node src/scripts/generateFeature.ts",
     "report:generate": "npx multiple-cucumber-html-reporter --reportDir reports/html --jsonDir reports/cucumber --reportName 'Consolidated Test Report' --displayDuration true",
-    "report:open": "open reports/html/index.html"
+    "report:open": "open reports/html/index.html",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "docker:restart": "docker compose restart",
+    "wait:prometheus": "npx wait-on http://localhost:9090",
+    "perf:test": "ENABLE_TRACING=true npm run cucumber -- --tags '@performanceTest'",
+    "perf:run": "npm run docker:up && npm run wait:prometheus && npm run perf:test",
+    "perf:full": "npm run docker:restart && npm run wait:prometheus && npm run perf:test"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -95,12 +102,14 @@
     "path": "^0.12.7",
     "postcss": "^8.5.3",
     "prettier": "3.3.3",
+    "prom-client": "^15.1.3",
     "read-excel-file": "5.8.6",
     "rimraf": "6.0.1",
     "standard-version": "9.5.0",
     "tailwindcss": "^4.0.9",
     "ts-node": "^10.9.2",
     "tsc-files": "1.1.4",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "wait-on": "^8.0.3"
   }
 }
