--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "generate:feature": "ts-node src/scripts/generateFeature.ts",
     "report:generate": "npx multiple-cucumber-html-reporter --reportDir reports/html --jsonDir reports/cucumber --reportName 'Consolidated Test Report' --displayDuration true",
     "report:open": "open reports/html/index.html",
+    "seed:weaviate": "ts-node src/scripts/seed-weaviate.ts",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down",
     "docker:restart": "docker compose restart",
@@ -65,7 +66,8 @@
     "pixelmatch": "5.3.0",
     "playwright": "1.48.2",
     "pngjs": "6.0.0",
-    "undefined": "^0.1.0"
+    "undefined": "^0.1.0",
+    "weaviate-ts-client": "^2.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "9.1.0",
