Complete structure updates for cucumber-automation

--- a/package.json
+++ b/package.json
@@ -6,37 +6,43 @@
   "license": "MIT",
   "description": "Cucumber Playwright Automation Framework",
   "scripts": {
-    "lint": "npm run lint:ts && npm run lint:gherkin",
-    "lint:fix": "eslint 'src/**/*.ts' '*.ts' --fix",
-    "lint:ts": "eslint 'src/**/*.ts'",
-    "lint:gherkin": "npx tsc && node dist/scripts/gherkin-lint.js",
-    "prepReport": "rimraf reports traces && mkdir -p reports/screenshots reports/accessibility",
-    "clean:reports": "rm -rf reports && mkdir -p reports/screenshots reports/performance reports/a11y reports/cucumber reports/playwright reports/html",
-    "cucumber": "cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require \"src/steps/**/*.ts\"",
-    "cucumber:no-jaeger": "cross-env ENABLE_TRACING=false cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require \"src/steps/**/*.ts\"",
-    "cucumber:dev": "npm run clean:reports && cross-env ENV=dev npx cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require 'src/steps/**/*.ts' && npm run report:generate",
-    "cucumber:staging": "npm run clean:reports && cross-env ENV=staging cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require 'src/steps/**/*.ts'",
-    "generate-feature": "ts-node src/scripts/generateFeatureFile.ts && npx gherkin-lint features/*.feature",
-    "validate-k6-report": "cat reports/performance/loadTest.json | jq",
-    "build": "npx tsc",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "codegen": "playwright codegen",
-    "test:qa": "cross-env ENV=qa npx playwright test",
-    "test:dev": "cross-env ENV=dev npx playwright test",
-    "test:staging": "cross-env ENV=staging npx playwright test",
-    "test": "cross-env ENV=qa npx playwright test",
-    "generate:feature": "ts-node src/scripts/generateFeature.ts",
-    "report:generate": "npx multiple-cucumber-html-reporter --reportDir reports/html --jsonDir reports/cucumber --reportName 'Consolidated Test Report' --displayDuration true",
-    "report:open": "open reports/html/index.html",
-    "seed:weaviate": "ts-node src/scripts/seed-weaviate.ts",
-    "docker:up": "docker compose up -d",
-    "docker:down": "docker compose down",
-    "docker:restart": "docker compose restart",
-    "wait:prometheus": "npx wait-on http://localhost:9090",
-    "perf:test": "ENABLE_TRACING=true npm run cucumber -- --tags '@performanceTest'",
-    "perf:run": "npm run docker:up && npm run wait:prometheus && npm run perf:test",
-    "perf:full": "npm run docker:restart && npm run wait:prometheus && npm run perf:test"
-  },
+  "lint": "npm run lint:ts && npm run lint:gherkin",
+  "lint:fix": "eslint 'src/**/*.ts' '*.ts' --fix",
+  "lint:ts": "eslint 'src/**/*.ts'",
+  "lint:gherkin": "npx tsc && node dist/scripts/gherkin-lint.js",
+
+  "clean:reports": "rm -rf reports && mkdir -p reports/screenshots reports/performance reports/a11y reports/cucumber reports/playwright reports/html",
+  "prepReport": "rimraf reports traces && mkdir -p reports/screenshots reports/accessibility",
+
+  "cucumber": "cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require \"src/steps/**/*.ts\"",
+  "cucumber:dev": "npm run clean:reports && cross-env ENV=dev npm run cucumber && npm run report:generate",
+  "cucumber:staging": "npm run clean:reports && cross-env ENV=staging npm run cucumber",
+
+  "generate:feature": "ts-node src/scripts/generateFeature.ts",
+
+  "build": "npx tsc",
+  "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+
+  "test": "cross-env ENV=qa npx playwright test",
+  "test:qa": "cross-env ENV=qa npx playwright test",
+  "test:dev": "cross-env ENV=dev npx playwright test",
+  "test:staging": "cross-env ENV=staging npx playwright test",
+  "codegen": "playwright codegen",
+
+  "report:generate": "npx multiple-cucumber-html-reporter --reportDir reports/html --jsonDir reports/cucumber --reportName 'Consolidated Test Report' --displayDuration true",
+  "report:open": "open reports/html/index.html",
+
+  "seed:weaviate": "ts-node src/scripts/seed-weaviate.ts",
+
+  "docker:up": "docker compose up -d",
+  "docker:down": "docker compose down",
+  "docker:restart": "docker compose restart",
+  "wait:prometheus": "npx wait-on http://localhost:9090",
+
+  "perf:test": "ENABLE_TRACING=true npm run cucumber -- --tags '@performanceTest'",
+  "perf:run": "npm run docker:up && npm run wait:prometheus && npm run perf:test",
+  "perf:full": "npm run docker:restart && npm run wait:prometheus && npm run perf:test"
+},
   "engines": {
     "node": ">=20.0.0"
   },
