--- a/package.json
+++ b/package.json
@@ -5,24 +5,38 @@
   "author": "David Tran",
   "license": "MIT",
   "description": "Cucumber Playwright Automation Framework",
+  "type": "module",
   "scripts": {
     "lint": "npm run lint:ts && npm run lint:gherkin",
     "lint:fix": "eslint 'src/**/*.ts' '*.ts' --fix",
     "lint:ts": "eslint 'src/**/*.ts'",
-    "lint:gherkin": "npx tsc && node dist/scripts/gherkin-lint.js",
+    "lint:gherkin": "tsx src/scripts/gherkin-lint.ts",
     "clean:reports": "rm -rf reports && mkdir -p reports/screenshots reports/performance reports/a11y reports/cucumber reports/playwright reports/html",
+    "clean:generated": "rm -rf src/features/generated src/steps/generated",
     "prepReport": "rimraf reports traces && mkdir -p reports/screenshots reports/accessibility",
-    "cucumber": "cucumber-js --config cucumber.mjs --format cucumber-console-formatter --require \"src/steps/**/*.ts\"",
+    "cucumber": "tsx ./node_modules/.bin/cucumber-js --config cucumber.mjs --format cucumber-console-formatter",
     "cucumber:dev": "npm run clean:reports && cross-env ENV=dev npm run cucumber && npm run report:generate",
     "cucumber:staging": "npm run clean:reports && cross-env ENV=staging npm run cucumber",
-    "generate:feature": "ts-node src/scripts/generateFeature.ts",
+    "cucumber:generated": "npm run clean:reports && cross-env ENV=dev npm run cucumber -- --tags '@generated'",
+    "generate:feature": "tsx src/scripts/generateFeature.ts",
+    "dom:interactive": "tsx src/scripts/dom-generator-interactive.ts",
+    "dom:generate": "tsx src/scripts/dom-generator.ts",
+    "dom:quick": "tsx src/scripts/dom-generator.ts $URL ./src/features \"Quick Generated Test\"",
+    "generate:from-url": "URL=$URL FEATURE_NAME=$FEATURE_NAME tsx src/scripts/dom-generator.ts ./src/features",
+    "generate:login": "URL=$URL FEATURE_NAME=\"Login Feature\" tsx src/scripts/dom-generator.ts ./src/features",
+    "generate:dashboard": "URL=$URL FEATURE_NAME=\"Dashboard Feature\" tsx src/scripts/dom-generator.ts ./src/features",
+    "generate:checkout": "URL=$URL FEATURE_NAME=\"Checkout Feature\" tsx src/scripts/dom-generator.ts ./src/features",
+    "generate:demo": "tsx src/scripts/dom-generator.ts https://playwright.dev ./src/features \"Playwright Demo\"",
+    "generate:example": "tsx src/scripts/dom-generator.ts https://example.com ./src/features \"Example Site\"",
+    "dom:test": "npm run generate:demo && npm run cucumber:generated",
+    "dom:workflow": "npm run dom:interactive && npm run cucumber:generated && npm run report:open",
+    "dom:help": "echo '🤖 DOM Generator Usage:\\n\\n📝 Basic Commands:\\n  npm run dom:generate <url> [output-dir] [feature-name]\\n  npm run dom:interactive  # Interactive mode with prompts\\n  npm run dom:quick URL=<url>\\n\\n🎯 Targeted Generation:\\n  npm run generate:login URL=<url>\\n  npm run generate:dashboard URL=<url>\\n  npm run generate:checkout URL=<url>\\n\\n🚀 Environment Variable Usage:\\n  URL=https://example.com FEATURE_NAME=\"My Feature\" npm run generate:from-url\\n\\n🧪 Test Generated Features:\\n  npm run dom:test        # Generate + test demo\\n  npm run cucumber:generated  # Run only @generated tests\\n  npm run dom:workflow    # Full interactive workflow\\n\\n📊 Examples:\\n  npm run generate:demo\\n  npm run generate:example\\n  URL=https://playwright.dev npm run generate:login'",
     "build": "npx tsc",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test": "cross-env ENV=qa npx playwright test",
     "test:qa": "cross-env ENV=qa npx playwright test",
     "test:dev": "cross-env ENV=dev npx playwright test",
     "test:staging": "cross-env ENV=staging npx playwright test",
-    "test:lighthouse": "NODE_OPTIONS='--loader ts-node/esm' cucumber-js --import 'src/steps/lighthouse.steps.mts' --tags @lightHouse",
     "codegen": "playwright codegen",
     "report:generate": "npx multiple-cucumber-html-reporter --reportDir reports/html --jsonDir reports/cucumber --reportName 'Consolidated Test Report' --displayDuration true",
     "report:open": "open reports/html/index.html",
@@ -60,6 +74,7 @@
     "csv-parser": "^3.0.0",
     "cucumber-console-formatter": "1.0.0",
     "cucumber-html-formatter": "3.1.0",
+    "date-fns": "^4.1.0",
     "inquirer": "^12.4.1",
     "moment": "^2.30.1",
     "openai": "^4.102.0",
@@ -113,6 +128,7 @@
     "tailwindcss": "^4.0.9",
     "ts-node": "^10.9.2",
     "tsc-files": "1.1.4",
+    "tsx": "^4.20.0",
     "typescript": "^5.6.3",
     "wait-on": "^8.0.3"
   },
