--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   jaeger:
     container_name: cucumber-playwright-jaeger
@@ -9,11 +7,11 @@ services:
       - COLLECTOR_OTLP_HTTP_HOST_PORT=:4318
       - COLLECTOR_OTLP_GRPC_HOST_PORT=:4317
     ports:
-      - "16686:16686"   # Jaeger UI
-      - "14250:14250"   # OTLP gRPC
-      - "6831:6831/udp" # Jaeger agent
-      - "4317:4317"     # OTLP gRPC
-      - "4318:4318"     # OTLP HTTP
+      - "16686:16686"
+      - "14250:14250"
+      - "6831:6831/udp"
+      - "4317:4317"
+      - "4318:4318"
 
   otel-collector:
     container_name: cucumber-playwright-otelcol
@@ -22,8 +20,8 @@ services:
     volumes:
       - ./otelcol-config.yaml:/etc/otelcol-config.yaml
     ports:
-      - "24317:4317"  # OTLP gRPC
-      - "24318:4318"  # OTLP HTTP
+      - "24317:4317"
+      - "24318:4318"
     depends_on:
       - jaeger
 
@@ -47,6 +45,19 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
       - grafana-storage:/var/lib/grafana
+
+  weaviate:
+    container_name: cucumber-playwright-weaviate
+    image: semitechnologies/weaviate:latest
+    ports:
+      - "8080:8080"
+    environment:
+      - QUERY_DEFAULTS_LIMIT=25
+      - AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED=true
+      - PERSISTENCE_DATA_PATH=/var/lib/weaviate
+      - DEFAULT_VECTORIZER_MODULE=text2vec-openai
+      - ENABLE_MODULES=text2vec-openai
+      - OPENAI_APIKEY=${OPENAI_APIKEY}
 
 volumes:
   grafana-storage:
