--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean:reports": "rm -rf reports && mkdir -p reports/screenshots reports/performance reports/a11y reports/cucumber reports/playwright reports/html",
     "clean:generated": "rm -rf src/features/generated src/steps/generated",
     "prepReport": "rimraf reports traces && mkdir -p reports/screenshots reports/accessibility",
-    "cucumber": "tsx ./node_modules/.bin/cucumber-js --config cucumber.mjs --format cucumber-console-formatter",
+    "cucumber": "tsx ./node_modules/.bin/cucumber-js --config cucumber.mjs --format cucumber-console-formatter --tags 'not @wip'",
     "cucumber:dev": "npm run clean:reports && cross-env ENV=dev npm run cucumber && npm run report:generate",
     "cucumber:staging": "npm run clean:reports && cross-env ENV=staging npm run cucumber",
     "cucumber:generated": "npm run clean:reports && cross-env ENV=dev npm run cucumber -- --tags '@generated'",
@@ -34,6 +34,7 @@
     "build": "npx tsc",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test": "cross-env ENV=qa npx playwright test",
+    "test:agent": "cucumber-js --require-module tsx --require src/steps --tags @agent",
     "test:qa": "cross-env ENV=qa npx playwright test",
     "test:dev": "cross-env ENV=dev npx playwright test",
     "test:staging": "cross-env ENV=staging npx playwright test",
