--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - PERSISTENCE_DATA_PATH=/var/lib/weaviate
       - DEFAULT_VECTORIZER_MODULE=text2vec-openai
       - ENABLE_MODULES=text2vec-openai
-      - OPENAI_APIKEY=${OPENAI_APIKEY}
+      - OPENAI_APIKEY=${OPENAI_API_KEY}
 
 volumes:
   grafana-storage:
