--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
+version: '3.8'
+
+networks:
+  observability:
+    driver: bridge
+
 services:
   jaeger:
     container_name: cucumber-playwright-jaeger
-    image: jaegertracing/all-in-one:1.45
+    image: jaegertracing/all-in-one:1.54
     environment:
       - COLLECTOR_OTLP_ENABLED=true
       - COLLECTOR_OTLP_HTTP_HOST_PORT=:4318
@@ -12,18 +18,32 @@ services:
       - "6831:6831/udp"
       - "4317:4317"
       - "4318:4318"
+    networks:
+      - observability
 
   otel-collector:
-    container_name: cucumber-playwright-otelcol
+    container_name: otel-collector
     image: otel/opentelemetry-collector-contrib:latest
     command: ["--config=/etc/otelcol-config.yaml"]
     volumes:
       - ./otelcol-config.yaml:/etc/otelcol-config.yaml
     ports:
-      - "24317:4317"
-      - "24318:4318"
+      - "24317:4317"  # OTLP gRPC
+      - "24318:4318"  # OTLP HTTP
+      - "8888:8888"   # Internal metrics
+      - "9464:9464"   # Prometheus exporter
+      - "55679:55679" # zpages
+      - "1777:1777"   # pprof
     depends_on:
       - jaeger
+      - prometheus
+    networks:
+      - observability
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8888/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   prometheus:
     image: prom/prometheus:latest
@@ -32,9 +52,16 @@ services:
       - "9090:9090"
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--web.enable-lifecycle'
       - '--web.enable-remote-write-receiver'
     volumes:
-      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus-storage:/prometheus
+    networks:
+      - observability
 
   grafana:
     image: grafana/grafana-oss:latest
@@ -43,8 +70,28 @@ services:
       - "3000:3000"
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
     volumes:
       - grafana-storage:/var/lib/grafana
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
+      - ./monitoring/grafana/dashboards:/etc/grafana/dashboards  # <-- corrected dashboard mount
+    depends_on:
+      - prometheus
+    networks:
+      - observability
+
+  k6:
+    image: grafana/k6:latest
+    container_name: k6
+    command: run --out experimental-prometheus-rw=http://prometheus:9090/api/v1/write --tag testid=cucumber-automation /scripts/test.js
+    volumes:
+      - ./scripts:/scripts
+    depends_on:
+      - prometheus
+    networks:
+      - observability
+    profiles:
+      - testing  # Only start when explicitly requested
 
   weaviate:
     container_name: cucumber-playwright-weaviate
@@ -58,6 +105,12 @@ services:
       - DEFAULT_VECTORIZER_MODULE=text2vec-openai
       - ENABLE_MODULES=text2vec-openai
       - OPENAI_APIKEY=${OPENAI_API_KEY}
+    volumes:
+      - weaviate-storage:/var/lib/weaviate
+    networks:
+      - observability
 
 volumes:
   grafana-storage:
+  prometheus-storage:
+  weaviate-storage:
