--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,14 +1,32 @@
 global:
   scrape_interval: 5s
+  evaluation_interval: 5s
 
-remote_write:
-  - url: http://localhost:9090/api/v1/write
+rule_files:
+  # - "first_rules.yml"
+  # - "second_rules.yml"
 
 scrape_configs:
-  - job_name: 'otel-collector'
+  - job_name: 'prometheus'
     static_configs:
-      - targets: ['host.docker.internal:24318']
+      - targets: ['localhost:9090']
+
+  - job_name: 'otel-collector-metrics'
+    static_configs:
+      - targets: ['otel-collector:8888']
+    scrape_interval: 5s
+    metrics_path: /metrics
+
+  - job_name: 'otel-collector-prometheus-exporter'
+    static_configs:
+      - targets: ['otel-collector:9464']
+    scrape_interval: 5s
+    metrics_path: /metrics
 
   - job_name: 'k6'
     static_configs:
-      - targets: ['host.docker.internal:9464']
+      - targets: ['k6:9464']
+    scrape_interval: 5s
+
+remote_write:
+  - url: http://prometheus:9090/api/v1/write
