--- a/otelcol-config.yaml
+++ b/otelcol-config.yaml
@@ -1,13 +1,3 @@
-# OpenTelemetry Collector Configuration
-# This configuration sets up the collector to receive telemetry data and forward it to Jaeger.
-
-extensions:
-  health_check: {}
-  pprof:
-    endpoint: 0.0.0.0:1777
-  zpages:
-    endpoint: 0.0.0.0:55679
-
 receivers:
   otlp:
     protocols:
@@ -15,14 +5,6 @@ receivers:
         endpoint: 0.0.0.0:4317
       http:
         endpoint: 0.0.0.0:4318
-
-  prometheus:
-    config:
-      scrape_configs:
-        - job_name: 'otel-collector'
-          scrape_interval: 10s
-          static_configs:
-            - targets: ['0.0.0.0:8888']
 
 processors:
   batch:
@@ -32,10 +14,11 @@ exporters:
     endpoint: "jaeger:4317"
     tls:
       insecure: true
-
   prometheus:
     endpoint: "0.0.0.0:9464"
-
+    namespace: "cucumber_automation"
+    const_labels:
+      environment: "test"
   debug:
     verbosity: detailed
 
@@ -45,15 +28,11 @@ service:
       receivers: [otlp]
       processors: [batch]
       exporters: [otlp, debug]
-
     metrics:
-      receivers: [otlp, prometheus]
+      receivers: [otlp]
       processors: [batch]
       exporters: [prometheus, debug]
-
     logs:
       receivers: [otlp]
       processors: [batch]
       exporters: [debug]
-
-  extensions: [health_check, pprof, zpages]
