--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "wait:prometheus": "npx wait-on http://localhost:9090",
     "perf:test": "ENABLE_TRACING=true npm run cucumber -- --tags '@performanceTest'",
     "perf:run": "npm run docker:up && npm run wait:prometheus && npm run perf:test",
-    "perf:full": "npm run docker:restart && npm run wait:prometheus && npm run perf:test"
+    "perf:full": "npm run docker:restart && npm run wait:prometheus && npm run perf:test",
+    "postinstall": "npx npm-force-resolutions"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -59,13 +60,13 @@
     "@cucumber/html-formatter": "21.7.0",
     "@cucumber/messages": "27.0.0",
     "@cucumber/pretty-formatter": "1.0.1",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.56.1",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
-    "@opentelemetry/instrumentation-fs": "^0.19.1",
-    "@opentelemetry/instrumentation-http": "^0.57.2",
-    "@opentelemetry/resources": "^1.30.1",
-    "@opentelemetry/sdk-node": "^0.57.2",
+    "@opentelemetry/api": "^1.4.1",
+    "@opentelemetry/auto-instrumentations-node": "^0.41.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.41.0",
+    "@opentelemetry/instrumentation-http": "^0.41.0",
+    "@opentelemetry/resources": "^1.4.1",
+    "@opentelemetry/sdk-node": "^0.41.2",
+    "@opentelemetry/semantic-conventions": "^1.4.1",
     "@playwright/test": "1.48.2",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-node": "4.22.0",
@@ -82,7 +83,6 @@
     "pixelmatch": "5.3.0",
     "playwright": "1.48.2",
     "pngjs": "6.0.0",
-    "undefined": "^0.1.0",
     "weaviate-ts-client": "^2.2.0"
   },
   "devDependencies": {
