--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "author": "David Tran",
   "license": "MIT",
-  "description": "Cucumber Playwright Automation Framework",
+  "description": "Cucumber Automation Framework",
   "type": "module",
   "scripts": {
     "lint": "npm run lint:ts && npm run lint:gherkin",
@@ -72,6 +72,7 @@
     "@tensorflow/tfjs-node": "4.22.0",
     "@types/k6": "^0.54.1",
     "@types/open": "^6.1.0",
+    "axios-mock-adapter": "^2.1.0",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.0.0",
     "cucumber-console-formatter": "1.0.0",
