--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "Cucumber Automation Framework",
   "type": "module",
   "scripts": {
+    "add-headers": "ts-node --esm scripts/addHeaders.ts",
     "lint": "npm run lint:ts && npm run lint:gherkin",
     "lint:fix": "eslint 'src/**/*.ts' '*.ts' --fix",
     "lint:ts": "eslint 'src/**/*.ts'",
